err/django-waitinglist.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/appconf'...
Listing './lib/python3.5/site-packages/django_appconf-1.0.2.dist-info'...
Listing './lib/python3.5/site-packages/django_waitinglist-1.4.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/waitinglist'...
Listing './lib/python3.5/site-packages/waitinglist/management'...
Listing './lib/python3.5/site-packages/waitinglist/management/commands'...
Compiling './lib/python3.5/site-packages/waitinglist/management/commands/export_to_trello.py'...
***   File "./lib/python3.5/site-packages/waitinglist/management/commands/export_to_trello.py", line 54
    print "Exported {0} onto Card {1}".format(
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/waitinglist/management/commands/make_contact.py'...
***   File "./lib/python3.5/site-packages/waitinglist/management/commands/make_contact.py", line 31
    print "Sent to {0} ({1}) [Card #{2}]".format(
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/waitinglist/templates'...
Listing './lib/python3.5/site-packages/waitinglist/templates/waitinglist'...
Listing './lib/python3.5/site-packages/waitinglist/templates/waitinglist/email'...
Listing './lib/python3.5/site-packages/waitinglist/templatetags'...
Compiling './lib/python3.5/site-packages/waitinglist/trello.py'...
***   File "./lib/python3.5/site-packages/waitinglist/trello.py", line 39
    print url
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
